k8s/observability/manifests/grafana-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability-system
spec:
  parentRefs:
    - name: envoy-gw
      sectionName: https
      namespace: networking
  hostnames:
    - grafana.tale.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /live/
      backendRefs:
        - name: grafana-live-image
          port: 80
    - backendRefs:
        - name: grafana-service
          port: 3000
